// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@className="some-class-name" matches the snapshot 1`] = `
<header
  className="Header some-class-name"
>
  <section
    className="Header__section"
  >
    <h3
      className="Header__title"
    >
      Ron Swanson Voter
    </h3>
    <h4
      className="Header__subtitle"
    >
      "Vote for your favorite quote!"
    </h4>
  </section>
  <section
    className="Header__section"
  >
    <div
      className="TotalQuotesInputNumber"
    >
      <label
        className="TotalQuotesInputNumber__label"
        htmlFor="total-quotes-input-number"
      >
        Total Quotes
      </label>
      <div
        className="ant-input-number ant-input-number-sm ant-input-number-out-of-range"
        onBlur={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="ant-input-number-handler-wrap"
        >
          <span
            aria-disabled={false}
            aria-label="Increase Value"
            className="ant-input-number-handler ant-input-number-handler-up"
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            role="button"
            unselectable="on"
          >
            <span
              aria-label="up"
              className="anticon anticon-up ant-input-number-handler-up-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="up"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                />
              </svg>
            </span>
          </span>
          <span
            aria-disabled={true}
            aria-label="Decrease Value"
            className="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            role="button"
            unselectable="on"
          >
            <span
              aria-label="down"
              className="anticon anticon-down ant-input-number-handler-down-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="ant-input-number-input-wrap"
        >
          <input
            aria-valuemax={100}
            aria-valuemin={2}
            aria-valuenow="0"
            autoComplete="off"
            className="ant-input-number-input"
            id="total-quotes-input-number"
            onChange={[Function]}
            role="spinbutton"
            step={1}
            value="0"
          />
        </div>
      </div>
    </div>
    <fieldset
      className="ThemeFieldset"
    >
      <label
        className="ThemeFieldset__label"
      >
        Theme
      </label>
      <div
        className="ant-radio-group ant-radio-group-outline"
      >
        <label
          className="ant-radio-wrapper"
        >
          <span
            className="ant-radio"
            style={Object {}}
          >
            <input
              checked={false}
              className="ant-radio-input"
              id="theme-light-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              type="radio"
              value="light"
            />
            <span
              className="ant-radio-inner"
            />
          </span>
        </label>
        <label
          className="ThemeFieldset__label"
          htmlFor="theme-light-input"
        >
          Light
        </label>
        <label
          className="ant-radio-wrapper"
        >
          <span
            className="ant-radio"
            style={Object {}}
          >
            <input
              checked={false}
              className="ant-radio-input"
              id="theme-dark-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              type="radio"
              value="dark"
            />
            <span
              className="ant-radio-inner"
            />
          </span>
        </label>
        <label
          className="ThemeFieldset__label"
          htmlFor="theme-dark-input"
        >
          Dark
        </label>
      </div>
    </fieldset>
    <div
      className="ant-select ant-select-sm QuoteSelect ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled ant-select-show-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <div
        className="ant-select-selector"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span
          className="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autoComplete="off"
            className="ant-select-selection-search-input"
            disabled={true}
            id="rc_select_TEST_OR_SSR"
            onChange={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onPaste={[Function]}
            readOnly={false}
            role="combobox"
            style={
              Object {
                "opacity": null,
              }
            }
            type="search"
            unselectable={null}
            value=""
          />
        </span>
        <span
          className="ant-select-selection-placeholder"
        >
          Select a quote
        </span>
      </div>
      <span
        aria-hidden={true}
        className="ant-select-arrow"
        onMouseDown={[Function]}
        style={
          Object {
            "WebkitUserSelect": "none",
            "userSelect": "none",
          }
        }
        unselectable="on"
      >
        <span
          aria-label="down"
          className="anticon anticon-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <span
      className="Header__votes"
    >
      Total Votes: 
      0
    </span>
  </section>
</header>
`;

exports[`matches the snapshot 1`] = `
<header
  className="Header"
>
  <section
    className="Header__section"
  >
    <h3
      className="Header__title"
    >
      Ron Swanson Voter
    </h3>
    <h4
      className="Header__subtitle"
    >
      "Vote for your favorite quote!"
    </h4>
  </section>
  <section
    className="Header__section"
  >
    <div
      className="TotalQuotesInputNumber"
    >
      <label
        className="TotalQuotesInputNumber__label"
        htmlFor="total-quotes-input-number"
      >
        Total Quotes
      </label>
      <div
        className="ant-input-number ant-input-number-sm ant-input-number-out-of-range"
        onBlur={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="ant-input-number-handler-wrap"
        >
          <span
            aria-disabled={false}
            aria-label="Increase Value"
            className="ant-input-number-handler ant-input-number-handler-up"
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            role="button"
            unselectable="on"
          >
            <span
              aria-label="up"
              className="anticon anticon-up ant-input-number-handler-up-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="up"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                />
              </svg>
            </span>
          </span>
          <span
            aria-disabled={true}
            aria-label="Decrease Value"
            className="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            role="button"
            unselectable="on"
          >
            <span
              aria-label="down"
              className="anticon anticon-down ant-input-number-handler-down-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="ant-input-number-input-wrap"
        >
          <input
            aria-valuemax={100}
            aria-valuemin={2}
            aria-valuenow="0"
            autoComplete="off"
            className="ant-input-number-input"
            id="total-quotes-input-number"
            onChange={[Function]}
            role="spinbutton"
            step={1}
            value="0"
          />
        </div>
      </div>
    </div>
    <fieldset
      className="ThemeFieldset"
    >
      <label
        className="ThemeFieldset__label"
      >
        Theme
      </label>
      <div
        className="ant-radio-group ant-radio-group-outline"
      >
        <label
          className="ant-radio-wrapper"
        >
          <span
            className="ant-radio"
            style={Object {}}
          >
            <input
              checked={false}
              className="ant-radio-input"
              id="theme-light-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              type="radio"
              value="light"
            />
            <span
              className="ant-radio-inner"
            />
          </span>
        </label>
        <label
          className="ThemeFieldset__label"
          htmlFor="theme-light-input"
        >
          Light
        </label>
        <label
          className="ant-radio-wrapper"
        >
          <span
            className="ant-radio"
            style={Object {}}
          >
            <input
              checked={false}
              className="ant-radio-input"
              id="theme-dark-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              type="radio"
              value="dark"
            />
            <span
              className="ant-radio-inner"
            />
          </span>
        </label>
        <label
          className="ThemeFieldset__label"
          htmlFor="theme-dark-input"
        >
          Dark
        </label>
      </div>
    </fieldset>
    <div
      className="ant-select ant-select-sm QuoteSelect ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled ant-select-show-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <div
        className="ant-select-selector"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span
          className="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autoComplete="off"
            className="ant-select-selection-search-input"
            disabled={true}
            onChange={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onPaste={[Function]}
            readOnly={false}
            role="combobox"
            style={
              Object {
                "opacity": null,
              }
            }
            type="search"
            unselectable={null}
            value=""
          />
        </span>
        <span
          className="ant-select-selection-placeholder"
        >
          Select a quote
        </span>
      </div>
      <span
        aria-hidden={true}
        className="ant-select-arrow"
        onMouseDown={[Function]}
        style={
          Object {
            "WebkitUserSelect": "none",
            "userSelect": "none",
          }
        }
        unselectable="on"
      >
        <span
          aria-label="down"
          className="anticon anticon-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <span
      className="Header__votes"
    >
      Total Votes: 
      0
    </span>
  </section>
</header>
`;
